# amazon-product-search-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
data/: product_ids.pkl  title_embs.npy  title_embs_cls.npy  title_embs_max.npy  title_embs_mean.npy
src/: Sparse_Retrieval.py  app.py
src/pages/: 1_Dense_Retrieval.py
