[tool.poetry]
name = "amazon-product-search-japanese"
version = "0.1.0"
description = ""
authors = ["rejasupotaro <takiguchi0817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
streamlit = "1.19.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.2.0"
black = "^23.3.0"
pyproject-flake8 = "^6.0.0.post1"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
