[tool.poetry]
name = "amazon-product-search-demo"
version = "0.1.0"
description = ""
authors = ["rejasupotaro <takiguchi0817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
streamlit = "1.19.0"
amazon-product-search-dense-retrieval = {git = "https://github.com/rejasupotaro/amazon-product-search-dense-retrieval.git"}


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.2.0"
black = "^23.3.0"
pyproject-flake8 = "^6.0.0.post1"
invoke = "^2.0.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# For available rules, see https://beta.ruff.rs/docs/rules/
select = [
    "F",  # Pyflakes
    "E",  # pydocstyle
    "W",  # pydocstyle
    "C90",  # mccabe
    "I",  # isort
    "N",  # pep8-naming
    "YTT",  # flake8-2020
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "Q",  # flake8-quotes
    "PT",  # flake8-pytest-style
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503"

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
ignore_missing_imports = true
